# ReadingDefFilesSCT

./: CMakeLists.txt  README.md  ReadingDefFilesSCT.cpp  ReadingDefFilesSCT.h  buildReadingDefFilesSCT.sh  main.cpp
